@@ -1,5 +1,6 @@
 /etc/ha.d/resource.d/ldirectord
 /etc/init.d/ldirectord
+/etc/default/ldirectord
 /etc/logrotate.d/ldirectord
 usr/sbin/ldirectord
 usr/sbin/supervise-ldirectord-config
