@@ -9,8 +9,11 @@ heartbeat (2.0.9-1) unstable; urgency=low
     - README.config-heartbeat-2.patch
   * Documentation path of ldirectord should be /usr/share/doc/ldirectord,
     not /usr/share/doc/ldirectord-2
+  * Create a Debian init script for ldirectord
+    Thanks to Ratiu Petru Iulius
+    (closes: #391974)
 
- -- Simon Horman <horms@debian.org>  Mon, 14 May 2007 15:10:28 +0900
+ -- Simon Horman <horms@debian.org>  Mon, 14 May 2007 15:16:20 +0900
 
 heartbeat (2.0.8-3) unstable; urgency=low
 
